Maverick Synergy 3.0.0-RC8 - TBC

Features
    o Log file transfers at INFO level with performance metrics.
    
Bug Fixes
  o When changing user/group via SftpFileAttributes create new attribute set with just the field being changed to avoid passing attributes that the server does not want to change.
  o Missing enableFile methods from RootLoggerContext interface.
  o Window space lockup when transfering to Maverick Legacy server due to Synergy attempting to write all blocks of data without checking responses.
  o SFTP channel does not exit after SSH_MSG_CHANNEL_EOF.
   
=================
=  HISTORY      =
=================

Maverick Synergy 3.0.0-RC7 - May 26, 2021
 
Features
    o Added optional symlinkTo and readSymbolicLink methods to AbstractFile.
    
Bug Fixes
    o Do not read or write SSH_FILEXFER_ATTR_SUBSECOND_TIMES if parent time flag has not been specified.
    o Refactored SFTP session cleanup to ensure events are always generated.
    o EVENT_AUTHENTICATION_STARTED added and fired once to indicate client has started authentication service with username parameter, EVENT_USERAUTH_STARTED now is fired at the beginning of each separate authentication attempt with parameters for user and method being attempted. 
    o Fixed event started/finished attributes in authentication to encompass entire authentication step, and separately on each individual attempt.
    o Allow JVM default trusted CA certificate store password of "changeit" to be overridden with System property maverick.trustedCACertsPassword.
    o Use ConcurrentLinkedQueue to prevent concurrent modification on shutdown hooks collection.
    o Refactored support for OpenSSH certificate extensions to include support for custom extension definitions.
    o Fixed broken server-side SCP and command initialization.
    o Removed NONE value from SecurityLevel. This was only used in NoneCipher and NoneHmac, which are not installed by default and the option was confusing in other context.