@@ -1,13 +1,15 @@
 Maverick Synergy 3.0.0-RC8 - TBC
 
 Features
-    o Log file transfers at INFO level with performance metrics.
+  o Log file transfers at INFO level with performance metrics.
     
 Bug Fixes
   o When changing user/group via SftpFileAttributes create new attribute set with just the field being changed to avoid passing attributes that the server does not want to change.
   o Missing enableFile methods from RootLoggerContext interface.
   o Window space lockup when transfering to Maverick Legacy server due to Synergy attempting to write all blocks of data without checking responses.
   o SFTP channel does not exit after SSH_MSG_CHANNEL_EOF.
+  o Transport idle mechanism not engaged causing idle timeout settings to be ignored. 
+  o Added additional support for extending authentication idle timeout setting to any part of the communication prior to successful authentication.
    
 =================
 =  HISTORY      =
